geoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoserver
  namespace: geoserver
spec:
  selector:
    app: geoserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
