geoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoserver-ingress
  namespace: geoserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: 127.0.0.1.nip.io
    http:
      paths:
      - path: /geoserver
        pathType: Prefix
        backend:
          service:
            name: geoserver-service
            port:
              number: 8080
